# minecraft-data-rs

./: Cargo.toml  build.rs
.github/workflows/: test.yml
src/api/: biomes.rs  blocks.rs  enchantments.rs  entities.rs  foods.rs  items.rs  loot.rs  mod.rs  protocol.rs  recipes.rs  versions.rs
src/api/tests/: enchantments.rs  mod.rs  versions.rs
src/models/: block.rs
src/models/protocol/: mod.rs  packet_mapper.rs  types.rs
