[package]
name = "minecraft-data-rs"
version = "0.8.1"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
description = "A wrapper for minecraft-data"
repository = "https://github.com/Trivernis/minecraft-data-rs"

[package.metadata]
minecraft_data_owner = "PrismarineJS"
minecraft_data_repo = "minecraft-data"

[dependencies]
thiserror = "*"
serde_json = "*"
serde_derive = "*"
serde = "*"
include_dir = { version = "*", optional = true }
itertools = { version = "*", optional = true }
lazy_static = { version = "*", optional = true }

[build-dependencies]
git2 = { version = "*", optional = true }
dirs = { version = "*", optional = true }
cargo_toml = { version = "*", optional = true }
serde = { version = "*", features = ["derive"], optional = true }

[features]
default = ["include-data", "api"]
include-data = ["include_dir", "itertools", "lazy_static", "git2", "dirs", "cargo_toml", "serde/derive"]
api = ["include-data"]